--- a/address.html
+++ b/address.html
@@ -75,7 +75,7 @@
                   </a>
                 </div>
                 <div class="addr-opration addr-del">
-                  <a href="javascript:;" class="addr-del-btn" @click="delFlag=true">
+                  <a href="javascript:;" class="addr-del-btn" @click="delConfirm(item)">
                     <svg class="icon icon-del"><use xlink:href="#icon-del"></use></svg>
                   </a>
                 </div>
@@ -86,7 +86,7 @@
               </li>
 
               <li class="addr-new">
-                <div class="add-new-inner">
+                <div class="add-new-inner" @click="addFlag=true">
                   <i class="icon-add">
                     <svg class="icon icon-add"><use xlink:href="#icon-add"></use></svg>
                   </i>
@@ -145,10 +145,10 @@
             </div>
           </div>
         </div>
-        <div class="md-modal modal-msg md-modal-transition" id="showModalw">
+        <div class="md-modal modal-msg md-modal-transition" id="showModalw" :class="{'md-show':addFlag}">
           <div class="md-modal-inner">
             <div class="md-top">
-              <button class="md-close">关闭</button>
+              <button class="md-close" @click="addFlag=false">关闭</button>
             </div>
             <div class="md-content">
               <div class="confirm-tips">
@@ -184,13 +184,14 @@
                 </div>
               </div>
               <div class="btn-wrap col-2">
-                <button class="btn btn--s" id="btnModalConfirms">保存</button>
-                <button class="btn btn--s btn--red" id="btnModalCancels">取消</button>
+                <button class="btn btn--s" id="btnModalConfirms" @click="saveItem(item)">保存</button>
+                <button class="btn btn--s btn--red" id="btnModalCancels" @click="addFlag=false">取消</button>
               </div>
             </div>
           </div>
         </div>
         <div class="md-overlay" id="showOverLay" v-if="delFlag"></div>
+        <div class="md-overlay" id="showOverLay" v-if="addFlag"></div>
       </div>
     </div>
   </div>
